添加spring cloud and gateway support

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,10 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: RegistrationSystem
+        - id: registration-route
           uri: lb://registration
           predicates:
-            - Path=/team/**
+            - Path=/registration/**
         - id: TicketSystem
           uri: lb://ticket
           predicates:
